[metadata]
name = term
version = 2.5
description = An enhanced version of the tty module
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Python Software Foundation License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
keywords = terminal, tty, setraw, setcbreak, opentty, readto, getyx, cursor position, escape sequence, lightmode, darkmode
author = Stefan H. Holek
author_email = stefan@epy.co.at
url = https://github.com/stefanholek/term
project_urls =
    Documentation = https://term.readthedocs.io/en/stable/
license = PSF-2.0

[options]
packages = find:
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
exclude =
    term.tests

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme

[egg_info]
tag_build = dev0

[bdist_wheel]
universal = true

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = true
